--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,8 +1,16 @@
 %btn-base {
   @extend .btn;
   @extend .font-weight-bold;
+}
 
+%btn-icon-right {
   i {
     @extend .ml-2;
+  }
+}
+
+%btn-icon-left {
+  i {
+    @extend .mr-2;
   }
 }
