--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -34,6 +34,7 @@
 
   a {
     @extend %btn-base;
+    @extend %btn-icon-right;
     @extend .btn-primary;
     @extend .btn-lg;
     @extend .text-uppercase;
