--- a/_includes/post.html
+++ b/_includes/post.html
@@ -35,7 +35,7 @@
             </div>
           {% endif %}
 
-          {% if page.content_type == 'BlogPosting' or page.content_type == 'Article' %}
+          {% if page.content_type == 'BlogPosting' %}
             <div class="post-tags">
               {% for tag in page.tags %}
                 <a href="/blog/tags/{{tag | slugify}}/">{{tag}}</a>
