--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -11,6 +11,7 @@
 @import "hire_us";
 @import "join";
 @import "alliances";
-@import "filter";
 @import "guides";
+@import "blog";
 @import "post";
+@import "filter";
