--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -72,7 +72,7 @@
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
-  @include hover { // styles focus state as well
+  @include hover {
     color: $background;
     background-color: $active-color;
     border-color: $active-color;
