--- a/_includes/post.html
+++ b/_includes/post.html
@@ -38,7 +38,7 @@
           {% if page.content_type == 'BlogPosting' %}
             <div class="post-tags">
               {% for tag in page.tags %}
-                <a href="/blog/tags/{{tag | slugify}}/">{{tag}}</a>
+                <a href="/blog/tag/{{tag | slugify}}/">{{tag | replace: '-', ' '}}</a>
               {% endfor %}
             </div>
           {% endif %}
