check to make sure blog post has tags before showing tags for it

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -35,7 +35,7 @@
             </div>
           {% endif %}
 
-          {% if page.content_type == 'BlogPosting' %}
+          {% if page.content_type == 'BlogPosting' and page.tags.size > 1 %}
             <div class="post-tags">
               {% for tag in page.tags %}
                 <a href="/blog/tag/{{tag | slugify}}/">{{tag}}</a>
