--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -31,16 +31,16 @@
   margin-left: 3px;
 }
 
-.filter-employee {
+.filter-title-wrapper.filter-employee {
   @extend .ml-2;
 }
 
 .filter-title {
-  @extend .mb-1;
   font-size: $font-size-xx-small;
 }
 
 .filter-subtitle {
+  @extend .mt-1;
   @extend .mb-0;
   @extend .text-uppercase;
   @extend .text-muted;
@@ -61,7 +61,7 @@
     margin-left: 7px;
   }
 
-  .filter-employee {
+  .filter-title-wrapper.filter-employee {
     @include ml-3;
   }
 
