refactor liquid code in head.html

--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -23,9 +23,7 @@
                <h3 class="filter-subtitle">{{filter_subtitle}}</h3>
              </div>
           {% else %}
-            <div class="filter-title-wrapper">
-              {{filter_title_markup}}
-            </div>
+            <div class="filter-title-wrapper">{{filter_title_markup}}</div>
           {% endif %}
 
           <div class="filter-count">{{filter_count}}</div>
